# BulgarianLawChat

./: .env.example  .gitignore  README.md  _test_pipeline.py  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: routes.py  schemas.py
app/db/: models.py  orm.py  session.py
app/integration/: corpus_pipeline.py  normalizer.py  parser.py
app/rag/: chunker.py  embeddings.py  generator.py  ingest.py  pipeline.py  prompts.py  query.py  reranker.py  retriever.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ChatInput.tsx  ChatMessages.tsx  LoadingIndicator.tsx  MarkdownAnswer.tsx  MessageBubble.tsx  SourcesPanel.tsx  WelcomeScreen.tsx
frontend/src/hooks/: useChat.ts
frontend/src/types/: api.ts
scripts/: test_search_rank.txt
